- added extended invitation share text - added instructions for inviting new members and devices and how to share the invitation - added explanations and warnings to auth views, e.g. about password and account creation and make it clear that password cannot be restored - added noHeader option to EditingSheet

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -293,7 +293,7 @@
   "remove": "Entfernen",
   "share": "Teilen",
   "expiresIn": "läuft {timeToExpiration} ab",
-  "invitationMessage": "Dein Einladungs-Code: {code}",
+  "invitationMessage": "Hallo,\n\nich sende dir einen Einladungs-Code für die {appName}-App.\n\n{appDescription} Du kannst {appName} hier herunterladen: {appDownloadURL}\n\nMit dem Einladungs-Code kannst du {appName} auf deinem Gerät benutzen und unserer Organisation {organizationName} beitreten.\n\nWenn du {appName} installiert hast, aktivierst du dein Gerät, indem du diesen Einladungs-Link anklickst: {invitationURL}\n\nOder du kopierst den Einladungs-Code {code}, startest {appName}, tippst in der App auf „{joinButtonLabel}” und fügst den Code ein.\n\n{expirationHint}\n",
   "invitationCode": "Einladungs-Code",
   "addNewDevice": "Mit diesem Gerät beitreten",
   "InvitationCodeMissing": "Bitte gib einen gültigen Einladungs-Code ein.",
@@ -353,5 +353,25 @@
   "requests": "Anfragen",
   "organizationMembers": "Mitgliederverwaltung",
   "contacts": "Kontakte",
-  "noTeamSelected": "Kein Team ausgewählt"
+  "noTeamSelected": "Kein Team ausgewählt",
+  "appDescriptionForInvitation": "RoaringRoster ist eine App für Dienstplanung und Abwesenheiten um Arbeitszeiten kollegial, selbstbestimmt und zuverlässig in unserem Team zu koordinieren.",
+  "invitationExpirationHint": "Beachte bitte, dass der Einladungs-Code {codeExpiration} abläuft.",
+  "teamMemberInvitationDescription": "Mit dem Code kannst du neue Mitglieder in deine Organisation einladen. Die Eingeladenen können beitreten, indem sie den Enladungs-Code als QR-Code mit der {appName}-App auf ihren Geräten scannen. Oder du kopierst und sendest den Code an die eingeladenen Personen, am besten über einen sicheren, verschlüsselten Messenger.",
+  "deviceInvitationCodeHint": "Tippe auf den QR-Code um ihn auf deinem neuen Gerät zu scannen. Oder sende den Einladungs-Code mit dem Teilen-Button an das neue Gerät, am besten über einen sicheren, verschlüsselten Messenger.",
+  "memberInvitationCodeHint": "Tippe auf den QR-Code, damit ihn die eingeladene Person auf ihrem Gerät scannen kann. Oder verwende den Teilen-Button um den Einladungs-Code an den Eingeladenen zu senden, am besten über einen sicheren, verschlüsselten Messenger.",
+  "memberInvitationInstructionTitle": "Zeig diesen Code dem neuen Mitglied zum Scannen mit seinem Gerät",
+  "deviceInvitationInstructionTitle": "Scanne diesen Code mit der {appName}-App auf deinem neuen Gerät",
+  "deviceInvitationShareButton": "Oder sende den Code als Nachricht an dein Gerät",
+  "memberInvitationShareButton": "Oder sende den Code als Nachricht an das neue Mitglied",
+  "deviceInvitationInstructionStep1": "Starte {appName} auf deinem neuen Gerät",
+  "memberInvitationInstructionStep1": "Die eingeladene Person startet {appName} auf ihrem Gerät",
+  "deviceInvitationInstructionStep2": "Tippe auf **{joinButtonLabel}**",
+  "memberInvitationInstructionStep2": "Sie tippt auf **{joinButtonLabel}**",
+  "deviceInvitationInstructionStep3": "Tippe auf das Kamera-Symbol oder füge den Code als Text ein",
+  "memberInvitationInstructionStep3": "Sie tippt auf das Kamera-Symbol oder fügt den Code als Text ein",
+  "joinWithInvitationHint": "Was ist ein Einladungs-Code und woher bekomme ich den?",
+  "joinWithInvitationTooltip": "Du benötigst einen {InvitationCodeLength}-stelligen Einladungs-Code oder QR-Code um ein Benutzerkonto zu erstellen und einer Organisation beizutreten oder um dich mit einem zusätzlichen Gerät anzumelden.\n\nWenn du noch kein Mitglied einer Organisation bist, erhältst du den Einladungs-Code von einem Admin der Organisation, der du beitreten möchtest.\n\nDu bist schon Mitglied und möchtest dieses Gerät als weiteres Gerät hinzufügen? Den Einladungs-Code hierfür erstellst du selbst in den Benutzer-Einstellungen auf dem Gerät, mit dem du bereits angemeldet warst.",
+  "passwordSecurityWarningTitle": "Du bist für dein Benutzerkonto und Passwort selbst verantwortlich",
+  "passwordSecurityWarning": "Dein Benutzerkonto und Passwort sind fest mit diesem Gerät verknüpft. Dein Passwort gilt nur für dieses Gerät und wird verwendet, um deine Daten sicher und lokal verschlüsselt zu speichern. Ohne dein Passwort kann niemand deine Daten entschlüsseln. **Verlierst du dein Passwort, kann es nicht wiederhergestellt werden, so dass du dich mit diesem Gerät nicht mehr anmelden kannst!** Bitte merke dir dein Passwort daher gut und bewahre es sicher auf, zum Beispiel in einem Passwort-Manager.\n\nBedenke auch: verlierst du dieses Gerät, kann dich nur ein Admin wieder in die Organisation einladen, es sei denn, du hast ein weiteres Gerät mit deinem Benutzerkonto verbunden. In deinen Benutzer-Einstellungen kannst du dir selbst für weitere Geräte einen Einladungs-Code erstellen. Deine Passwörter auf anderen Geräten können sich von diesem unterscheiden, denn jedes Passwort ist an das jeweilige Gerät und nicht an das Benutzerkonto gebunden.",
+  "passwordSecurityCheckbox": "Ich habe die Sicherheitshinweise verstanden"
 }
