--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -293,7 +293,7 @@
   "remove": "Remove",
   "share": "Share",
   "expiresIn": "expires {timeToExpiration}",
-  "invitationMessage": "Your invitation code: {code}",
+  "invitationMessage": "Hello,\n\nI'm sending you an invitation code for the {appName} app.\n\n{appDescription} You can download {appName} here: {appDownloadURL}\n\nWith the invitation code you can use {appName} on your device and join our organization {organizationName}.\n\nOnce you have installed {appName}, activate your device by clicking this invitation link: {invitationURL}\n\nOr you copy the invitation code {code}, start {appName}, tap on “{joinButtonLabel}” and paste the code.\n\n{expirationHint}\n",
   "invitationCode": "Invitation code",
   "addNewDevice": "Join using this device",
   "InvitationCodeMissing": "Please enter a valid invitation code.",
@@ -353,5 +353,25 @@
   "requests": "Requests",
   "organizationMembers": "Membership Administration",
   "contacts": "Contacts",
-  "noTeamSelected": "No team selected"
+  "noTeamSelected": "No team selected",
+  "appDescriptionForInvitation": "RoaringRoster is an app for rostering and absences to coordinate working hours in a collaborative, self-determined and reliable way within our team.",
+  "invitationExpirationHint": "Please note that the invitation code expires {codeExpiration}.",
+  "teamMemberInvitationDescription": "You can use the code to invite new members to join your organization. Invitees can join by scanning the invitation code as a QR code with the {appName} app on their devices. Or you copy and send the code to the invitees, preferably via a secure, encrypted messenger app.",
+  "deviceInvitationCodeHint": "Tap on the QR code to scan it on your new device. Or send the invitation code to the new device using the share button, preferably via a secure, encrypted messenger app.",
+  "memberInvitationCodeHint": "Tap on the QR code so that the invited person can scan it on his device. Or use the share button to send the invitation code to the invitee, preferably via a secure, encrypted messenger app.",
+  "memberInvitationInstructionTitle": "Show this code to the new member to scan it with his device",
+  "deviceInvitationInstructionTitle": "Scan this code with the {appName} app on your new device",
+  "deviceInvitationShareButton": "Or send the code as a message to your device",
+  "memberInvitationShareButton": "Or send this code as a message to the new member",
+  "deviceInvitationInstructionStep1": "Start {appName} on your new device",
+  "memberInvitationInstructionStep1": "The invited person starts {appName} on his device",
+  "deviceInvitationInstructionStep2": "Tap on **{joinButtonLabel}**",
+  "memberInvitationInstructionStep2": "He taps on **{joinButtonLabel}**",
+  "deviceInvitationInstructionStep3": "Tap the camera icon or paste the code as text",
+  "memberInvitationInstructionStep3": "He taps the camera icon or pastes the code as text",
+  "joinWithInvitationHint": "What is an invitation code – and where can I get one?",
+  "joinWithInvitationTooltip": "You need a {InvitationCodeLength}-digit invitation code or QR code to create a user account and join an organization or to register an additional device.\n\nIf you are not yet a member of an organization, you will receive the invitation code from an admin of the organization you want to join.\n\nAre you already a member and want to add this device as an additional one? You can create the invitation code yourself in your user settings on a device with which you were already logged in.",
+  "passwordSecurityWarningTitle": "You are responsible for your user account and password",
+  "passwordSecurityWarning": "Your user account and password are securely linked to this device. Your password is only valid for this device and is used to store your data securely and locally encrypted. Without your password, no one can decrypt your data. **If you lose your password, it cannot be recovered and you will no longer be able to log in with this device!** Please remember your password well and keep it safe, for example in a password manager.\n\nAlso remember: if you lose this device, only an admin can invite you back into the organization, unless you have registered another device with your user account. In your user settings, you can create an invitation code for other devices yourself. Your passwords on other devices may differ from this one, as each password is linked to the respective device and not to the user account.",
+  "passwordSecurityCheckbox": "I understand these security instructions"
 }
