--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -375,5 +375,6 @@
   "passwordSecurityWarning": "Dein Benutzerkonto und Passwort sind fest mit diesem Gerät verknüpft. Dein Passwort gilt nur für dieses Gerät und wird verwendet, um deine Daten sicher und lokal verschlüsselt zu speichern. Ohne dein Passwort kann niemand deine Daten entschlüsseln. **Verlierst du dein Passwort, kann es nicht wiederhergestellt werden, so dass du dich mit diesem Gerät nicht mehr anmelden kannst!** Bitte merke dir dein Passwort daher gut und bewahre es sicher auf, zum Beispiel in einem Passwort-Manager.\n\nBedenke auch: verlierst du dieses Gerät, kann dich nur ein Admin wieder in die Organisation einladen, es sei denn, du hast ein weiteres Gerät mit deinem Benutzerkonto verbunden. In deinen Benutzer-Einstellungen kannst du dir selbst für weitere Geräte einen Einladungs-Code erstellen. Deine Passwörter auf anderen Geräten können sich von diesem unterscheiden, denn jedes Passwort ist an das jeweilige Gerät und nicht an das Benutzerkonto gebunden.",
   "passwordSecurityCheckbox": "Ich habe die Sicherheitshinweise verstanden",
   "hostname": "Hostname",
-  "ownServerAddress": "Eigener Server"
+  "ownServerAddress": "Eigener Server",
+  "moreButton": "Mehr…"
 }
