- added user contact and user agreements pages and made them persistent using Automerge models - added team contacts and team agreements pages and made them persistent using Automerge models - AbscencesPage uses deepMerge - made RosterPage persistent using Automerge models - MemberList: show members with full contact names instead of username if possible - NavigationDrawer: show full contact name of current user if possible - support Date type with Automerge deep merge algorithm - extended NavigationSection with optional route params configuration - fixed highlighting of active navigation menu items

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -376,5 +376,9 @@
   "passwordSecurityCheckbox": "Ich habe die Sicherheitshinweise verstanden",
   "hostname": "Hostname",
   "ownServerAddress": "Eigener Server",
-  "moreButton": "Mehr…"
+  "moreButton": "Mehr…",
+  "userContact": "Meine Kontaktdaten",
+  "userAgreements": "Meine Vereinbarungen",
+  "degree": "Titel",
+  "addAcademicTitleButton": "Titel hinzufügen"
 }
