added missing i18n strings for JoinOrganizationView

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -376,6 +376,10 @@
   "passwordSecurityCheckbox": "Ich habe die Sicherheitshinweise verstanden",
   "hostname": "Hostname",
   "ownServerAddress": "Eigener Server",
+  "addDeviceHint": "Wenn du bereits Mitglied dieser Organisation bist und dein vorhandenes Nutzerkonto zusätzlich mit diesem neuen Gerät nutzen möchtest.",
+  "addMemberHint": "Wenn du noch kein Mitglied dieser Organisation bist und ihr mit einem neuen Nutzerkonto beitreten möchtest.",
+  "addMemberTitle": "Als neues Mitglied beitreten",
+  "addDeviceTitle": "Zusätzliches Gerät hinzufügen",
   "moreButton": "Mehr…",
   "userContact": "Meine Kontaktdaten",
   "userAgreements": "Meine Vereinbarungen",
