--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -376,6 +376,10 @@
   "passwordSecurityCheckbox": "I understand these security instructions",
   "hostname": "Hostname",
   "ownServerAddress": "Own server",
+  "addDeviceHint": "If you are already a member of this organization and want to use your existing user account with this additional device.",
+  "addMemberHint": "If you are not yet a member of this organization and would like to join it with a new user account.",
+  "addMemberTitle": "Join as a new member",
+  "addDeviceTitle": "Add additional device",
   "moreButton": "More…",
   "userContact": "My contact details",
   "userAgreements": "My agreements",
