support multiple teams: create, edit and delete teams, add and remove team members and manage roles

--- a/src/i18n/de-DE/index.json
+++ b/src/i18n/de-DE/index.json
@@ -384,5 +384,29 @@
   "userContact": "Meine Kontaktdaten",
   "userAgreements": "Meine Vereinbarungen",
   "degree": "Titel",
-  "addAcademicTitleButton": "Titel hinzufügen"
+  "addAcademicTitleButton": "Titel hinzufügen",
+  "addTeam": "Neues Team hinzufügen …",
+  "teamNotFound": "Das Team wurde nicht gefunden.",
+  "noExistingTeams": "Du bist noch kein Mitglied in einem Team.",
+  "settingsTitle": "Einstellungen",
+  "teamName": "Teamname",
+  "deleteTeam": "Team löschen",
+  "isCurrentUser": "(Du)",
+  "addTeamMember": "Team-Mitglied hinzufügen",
+  "membersTitle": "Mitglieder",
+  "hasTeamAdminRole": "Team-Admin",
+  "hasNoTeamAdminRole": "Kein Team-Admin",
+  "teamRolesDescription": "**Jedes Mitglied** kann Klienten hinzufügen, bearbeiten und archivieren, neue Teams erstellen und Teams verlassen.\n\n**Ein Team-Admin** kann Mitglieder zum Team hinzufügen oder herausnehmen, Admin-Rechte vergeben, Klienten entfernen, das Team löschen und Team-Einstellungen ändern.",
+  "oneAdminRequiredErrorMessage": "Um deine Admin-Rolle ablegen oder das Team verlassen zu können, musst du zuerst einem anderen Mitglied Admin-Rechte geben.",
+  "oneAdminRequiredErrorTitle": "Du bist der einzige Team-Admin",
+  "selectedTeam": "Ausgewähltes Team",
+  "generalSettings": "Allgemeine Einstellungen",
+  "unknownMember": "Unbenanntes Mitglied",
+  "singleTeamMemberRemovalDisabledReason": "Nicht möglich, da einziges Mitglied des Teams",
+  "onlyTeamForMemberRemovalDisabledReason": "Nicht möglich, da Mitglied sonst kein Team hätte",
+  "singleTeamAdminRemovalDisabledReason": "Nicht möglich, da einziger Team-Admin des Teams",
+  "membersHaveOnlyThisTeamMessage": "In diesem Team gibt es noch Mitglieder, die in keinem weiteren Team Mitglied sind. Das Team kann nicht gelöscht werden, bis diese in anderen Teams aufgenommen wurden.",
+  "singleTeamMessage": "Dies ist das einzige Team der Organisation.",
+  "confirmTeamDeletionMessage": "Das Team {name} wird unwiederbringlich gelöscht.",
+  "teamDeletionNotPossibleTitle": "Team kann noch nicht gelöscht werden"
 }
