--- a/src/i18n/en-US/index.json
+++ b/src/i18n/en-US/index.json
@@ -384,5 +384,29 @@
   "userContact": "My contact details",
   "userAgreements": "My agreements",
   "degree": "Degree",
-  "addAcademicTitleButton": "Add degree"
+  "addAcademicTitleButton": "Add degree",
+  "addTeam": "Add new team …",
+  "teamNotFound": "The team was not found.",
+  "noExistingTeams": "You are not yet a member of a team.",
+  "settingsTitle": "Settings",
+  "teamName": "Team name",
+  "deleteTeam": "Delete team",
+  "isCurrentUser": "(You)",
+  "addTeamMember": "Add team member",
+  "membersTitle": "Members",
+  "hasTeamAdminRole": "Team admin",
+  "hasNoTeamAdminRole": "No team admin",
+  "teamRolesDescription": "**Every member** can add, edit and archive clients, create a new team and leave teams.\n\n**A Team admin** can add or remove members from the team, assign admin rights, remove clients, delete the team and change team settings.",
+  "oneAdminRequiredErrorMessage": "In order to be able to abandon your admin role or to leave the team, you must first grant another member admin rights.",
+  "oneAdminRequiredErrorTitle": "You are the only team admin",
+  "selectedTeam": "Selected Team",
+  "generalSettings": "General settings",
+  "unknownMember": "Unnamed member",
+  "singleTeamMemberRemovalDisabledReason": "Not possible because only member of the team",
+  "onlyTeamForMemberRemovalDisabledReason": "Not possible, otherwise member would have no team",
+  "singleTeamAdminRemovalDisabledReason": "Not possible, because only team admin of the team",
+  "membersHaveOnlyThisTeamMessage": "There are still members in this team who are not members of any other team. The team cannot be deleted until they have been added to other teams.",
+  "singleTeamMessage": "This is the only team in the organization.",
+  "confirmTeamDeletionMessage": "The team {name} will be irretrievably deleted.",
+  "teamDeletionNotPossibleTitle": "Team cannot be deleted yet"
 }
